fixing image not showing

--- a/public/css/site/style.css
+++ b/public/css/site/style.css
@@ -1,6 +1,12 @@
 .cursor-pointer{
   cursor: pointer !important;
 }
+.primary-divider{
+  border: 2px solid #fe5757;
+}
+.pb-10{
+  padding-bottom: 10px;
+}
 .list-inline{
   padding-left: 0;
   list-style: none;
@@ -796,6 +802,7 @@ textarea.input {
   -webkit-transform: skewX(-45deg);
   -ms-transform: skewX(-45deg);
   transform: skewX(-45deg);
+  z-index: 2;
 }
 
 .shop:after {
@@ -810,12 +817,13 @@ textarea.input {
   -webkit-transform: skewX(-45deg) translateX(-100%);
   -ms-transform: skewX(-45deg) translateX(-100%);
   transform: skewX(-45deg) translateX(-100%);
+  z-index: 2;
 }
 
 .shop .shop-img {
   position: relative;
   background-color: #E4E7ED;
-  z-index: -1;
+  z-index: 1;
 }
 
 .shop .shop-img>img {
@@ -1012,8 +1020,11 @@ textarea.input {
 .product .product-body .product-name {
   text-transform: uppercase;
   font-size: 14px;
+  padding-bottom: 10px;
 }
-
+.old-price{
+  font-size: 13px;
+}
 .product .product-body .product-name>a {
   font-weight: 700;
 }
@@ -1208,6 +1219,7 @@ textarea.input {
 .product-widget .product-body .product-name {
   text-transform: uppercase;
   font-size: 12px;
+  padding-bottom: 10px;
 }
 
 .product-widget .product-body .product-name>a {
@@ -1565,6 +1577,7 @@ textarea.input {
 .product-details .product-name {
   text-transform: uppercase;
   font-size: 18px;
+  padding-bottom: 10px;
 }
 
 .product-details .product-rating {
@@ -1586,7 +1599,7 @@ textarea.input {
 
 .product-details .product-price {
   display: inline-block;
-  font-size: 24px;
+  font-size: 18px;
   margin-top: 10px;
   margin-bottom: 15px;
   color: #D10024;
